More corrections and correcting citations.

--- a/references.bib
+++ b/references.bib
@@ -1,8 +1,8 @@
 @book{humphreys81,
-	title = {Linear Algebraic Groups},
-	author = {Humphreys, J.},
-	publisher = {Springer-Verlag},
-	year = {1981}
+	title={Linear Algebraic Groups},
+	author={Humphreys, J.},
+	publisher={Springer-Verlag},
+	year={1981}
 }
 
 @article{dipper89,
@@ -179,7 +179,7 @@
 	eprint = {arXiv:math/0703178}
 }
 
-@article{hudec07,
+@misc{hudec07,
 	title={The Grassmanian as a Projective Variety},
 	author={Hudec, D. A.},
 	year={2007}
@@ -194,10 +194,10 @@
 }
 
 @misc{dou10,
-	author = {Dou, R and Jiang, Y. and Xiao, J.},
-	title = {Hall algebra approach to Drinfeld's presentation of quantum loop algebras},
-	year = {2010},
-	eprint = {arXiv:1002.1316}
+	author={Dou, R and Jiang, Y. and Xiao, J.},
+	title={Hall algebra approach to Drinfeld's presentation of quantum loop algebras},
+	year={2010},
+	eprint={arXiv:1002.1316}
 }
 
 @article{su10,
@@ -230,13 +230,6 @@
 	publisher={North-Holland}
 }
 
-@misc{su12,
-	author = {Jensen, B.T. and Su, X.},
-	title = {A geometric realisation of 0-Schur and 0-Hecke algebras},
-	year = {2012},
-	eprint = {arXiv:1207.6769}
-}
-
 @article{bridgeland13,
 	title={Quantum groups via Hall algebras of complexes},
 	author={Bridgeland, T.},
@@ -263,23 +256,38 @@
 	publisher={Springer Science \& Business Media}
 }
 
-@misc{su15,
-	author = {Jensen, B. T. and Su, X.},
-	title = {Projective modules of 0-Schur algebras},
-	year = {2015},
-	eprint = {arXiv:1312.5487v3}
+@article{su15,
+	title={Geometric realisation of 0-Schur and 0-Hecke algebras},
+	author={Jensen, B.T. and Su, X.},
+	journal={Journal of Pure and Applied Algebra},
+	volume={219},
+	number={2},
+	pages={277--307},
+	year={2015}
 }
 
 @misc{deng15-01,
-	author = {Deng, B. and Ruan, S.},
-	title = {Hall polynomials for tame type},
-	year = {2015},
-	eprint = {arXiv:1512.03504}
+	author={Deng, B. and Ruan, S.},
+	title={Hall polynomials for tame type},
+	year={2015},
+	eprint={arXiv:1512.03504}
 }
 
-@misc{su17,
-	author = {Jensen, B. T. and Su, X.},
-	title = {Degenerate 0-Schur algebras and nil-Temperley-Lieb algebras},
-	year = {2017},
-	eprint = {arXiv:1705.06084v2}
+@article{su16,
+	title={Projective modules of 0-Schur algebras},
+	author={Jensen, B.T. and Su, X. and Yang, G.},
+	journal={Journal of Algebra},
+	volume={454},
+	pages={181--205},
+	year={2016}
 }
+
+@article{su20,
+	title={Degenerate 0-Schur algebras and nil-Temperley-Lieb algebras},
+	author={Jensen, B.T. and Su, X. and Yang, G.},
+	journal={Algebra and Representation Theory},
+	volume={23},
+	pages={1177--1196},
+	year={2020}
+}
+
