--- a/titlepage.tex
+++ b/titlepage.tex
@@ -16,14 +16,15 @@ University of Bath\\
 Department of Mathematical Sciences\\
 December 2020\\
 
-\vspace{0.7cm}
+\vspace{4.2cm}
 \normalsize
 \textbf{Copyright}\\
 \vspace{0.7cm}
 Attention is drawn to the fact that copyright of this thesis rests with the author and copyright of any previously published materials included may rest with third parties. A copy of this thesis has been supplied on condition that anyone who consults it understands that they must not copy it or use material from it except as permitted by law or with the consent of the author or other copyright owners, as applicable.\\
-
 \vspace{0.7cm}
+
 This thesis may be made available for consultation within the University Library and may be photocopied or lent to other libraries for the purposes of consultation with effect from ....................(date)\\
-Signed on behalf of the Faculty of Science ....................\\
+\vspace{0.7cm}
+Signed on behalf of the Faculty of Science ..........................\\
 \end{center}
 \end{titlepage}
